--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,58 @@
+html {
+  box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 body {
-  
+  margin: 0;
 }
 
 .img-flex {
+  display: block;
+  width: 100%;
+}
+
+.banner {
+  position: relative;
   max-height: 500px;
+  overflow: hidden;
+}
+
+.banner-content {
+  position: absolute;
+  bottom: 0;
+  padding-left: 1.5rem;
+  padding-top: 2rem;
+
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
   max-width: 50em;
 }
 
-h1 {
-  font-size: 4rem;
-  font-family: Open Sans, sans-serif;
-  background-color: rgba(0, 0, 0, 0.5);
+h2 .banner-content,
+p .banner-content {
+  margin: 0;
+}
+
+span {
+  background-color: rgba(0, 0, 0, .5);
 }
 
 h2 {
+  display: inline;
+  font-size: 4rem;
+  color: #fff;
+  line-height: 1.4em;
+  text-align: left;
+}
+
+p {
   font-size: 2rem;
-  font-family: Open Sans, sans-serif;
   font-style: italic;
+  line-height: 1.4;
 }
